# Micrium_POSIX

./: .gitignore  Makefile  Micrium_POSIX.code-workspace  README.md  my_prlimit  my_prlimit.c
orig/: uCOSV252.exe.rar
src/: CMakeLists.txt
src/Application/: app.c
src/Application/POSIX/GNU/OS3/: app.c
src/Software/uC-CPU/: cpu_def.h
src/Software/uC-LIB/Source/: lib_def.h
src/Software/uC-Shell/Cfg/: shell_cfg.h
src/Software/uC-Shell/Cmd/General/: sh_shell.c  sh_shell.h
src/Software/uC-Shell/Source/: shell.c  shell.h
src/Software/uC-Terminal/Cfg/: terminal_cfg.h
src/Software/uC-Terminal/Serial/Posix/GNU/: terminal_serial.c
src/Software/uC-Terminal/Source/: terminal.c  terminal.h
src/Software/uCOS-III/Ports/POSIX/GNU/: os_cpu_c.c
src/Software/uCOS-III/Source/: os.h
